--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
           <div class="button">
             <button>
-              <img src="/FEMentorChallenge_CardPreview/images/icon-cart.svg">
+              <img src="/images/icon-cart.svg">
               Add to Cart
             </button>
           </div>
